# ironfish

./: .envrc  .gitattributes  .gitignore  Brewfile  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TRM_STRATUM.md  benchmarks.js  build_ubuntu.sh  codecov.yml  diff.txt  foo.sh  ironfish.md  lerna.json  mine_pool.sh  ominous  openapitools.json  package.json  run_node.sh  snapshot.sh  typedoc.json
.cargo/: config.toml
.github/: CODEOWNERS  ISSUE_TEMPLATE  dependabot.yml  pull_request_template.md  release.yml
Deploy_on_Akash_Network/: Dockerfile  README.md  deploy.yml  setup.sh
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: asset.rs  merkle_note.rs  sapling_key.rs  transaction.rs
benchmarks/src/: lib.rs
ci/: lintHeaders.sh
config/: jest.config.base.js  jestNodeEnvironment.js  jestWatchPlugin.js  tsconfig.base.json
ironfish-cli/: .eslintrc.js  .prettierrc.js  .yarnrc  Dockerfile  README.md  STYLE_GUIDE.md  clean.js  foo.json  jest.config.js  jest.setup.js  package.json  start.js  tsconfig.build.json  tsconfig.json  tsconfig.test.json
ironfish-contracts/: README.md  index.ts  package.json  tsconfig.json
ironfish-graph-explorer/: README.md  package.json  webpack.config.js
ironfish-http-api/: .eslintrc.js  (+6 more)
ironfish-http-api-v2/: .env.test  .eslintrc.js  Procfile  README.md  docker-compose.sql  docker-compose.yml  jest.config.js  package.json  tsconfig.json  tsconfig.test.json
ironfish-mpc/: .gitignore  COPYRIGHT  Cargo.toml  README.md
ironfish-mpc/src/: compute.rs  lib.rs  verify_transform.rs
ironfish-phase2/: .gitignore  COPYRIGHT  Cargo.toml  README.md
ironfish-phase2/examples/: mimc.rs
ironfish-phase2/src/: lib.rs
ironfish-rust/: Cargo.toml  README.md  build.rs
ironfish-rust-nodejs/: Cargo.toml  README.md  index.d.ts  index.js  index.node.d.ts  index.ts  jest.config.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
ironfish-rust-nodejs/npm/darwin-arm64/: README.md  package.json
ironfish-rust-nodejs/npm/darwin-x64/: README.md  package.json
ironfish-rust-nodejs/npm/linux-arm64-gnu/: README.md  package.json
ironfish-rust-nodejs/npm/linux-arm64-musl/: README.md  package.json
ironfish-rust-nodejs/npm/linux-x64-gnu/: README.md  package.json
ironfish-rust-nodejs/npm/linux-x64-musl/: README.md  package.json
ironfish-rust-nodejs/npm/win32-x64-msvc/: README.md  package.json
ironfish-rust-nodejs/src/: fish_hash.rs  frost.rs  lib.rs  mpc.rs  multisig.rs  nacl.rs  rolling_filter.rs  signal_catcher.rs  signing.rs  stats.rs  uv.rs  wrong_header.rs  xchacha20poly1305.rs
ironfish-rust-nodejs/src/structs/: asset.rs  assets.rs  encryption_key.rs  key.rs  key_packages.rs  keys.rs  miners_fee_transaction.rs  mod.rs  note.rs  note_encrypted.rs  output_description.rs  spend_proof.rs  transaction.rs  unsigned.rs  witness.rs
ironfish-rust-nodejs/tests/: demo.test.slow.ts  fish_hash.test.slow.ts  frost.test.slow.ts  transaction.test.slow.ts  unsigned.test.slow.ts
ironfish-rust-wasm/: Cargo.toml  DEPLOYMENT.md  README.md  package.json  tsconfig.json
ironfish-rust-wasm/src/: assets.rs  circuits.rs  errors.rs  lib.rs  merkle_note.rs  note.rs  primitives.rs  witness.rs
ironfish-rust-wasm/src/keys/: ephemeral.rs  mnemonics.rs  mod.rs  proof_generation_key.rs  public_address.rs  sapling_key.rs  view_keys.rs
ironfish-rust-wasm/src/panic_hook/: mod.rs
ironfish-rust-wasm/src/transaction/: burns.rs  mints.rs  mod.rs  outputs.rs  proposed.rs  spends.rs  unsigned.rs
ironfish-rust-wasm/src/wasm_structs/: errors.rs  mod.rs  note.rs  note_encrypted.rs  spend_proof.rs  transaction.rs  witness.rs
ironfish-rust/benches/: transaction.rs
ironfish-rust/src/: asset_note.rs  creating_asset.rs  errors.rs  lib.rs  merkle_note.rs  merkle_note_hash.rs  mining.rs  nacl.rs  note.rs  nullifiers.rs  output_description.rs  outputs.rs  receiving.rs  rolling_filter.rs  rolling_filter2.rs  sapling.rs  sapling_bls12.rs  serializing.rs  signal_catcher.rs  signing.rs  spending.rs  test_util.rs  tweetnacl.rs  util.rs  witness.rs  xchacha20poly1305.rs
ironfish-rust/src/assets/: asset.rs  asset_identifier.rs  constants.rs  mod.rs
ironfish-rust/src/common/: mod.rs  readwrite.rs
ironfish-rust/src/frost_utils/: account_keys.rs  mod.rs  round_one.rs  round_two.rs  signature_share.rs  signing_commitment.rs  signing_package.rs  signing_share.rs  split_secret.rs  split_spender_key.rs
ironfish-rust/src/keys/: ephemeral.rs  key_packages.rs  mod.rs  proof_authorizing_key.rs  proof_generation_key.rs  public_address.rs  test.rs  util.rs  view_keys.rs
ironfish-rust/src/mining/: mine.rs  thread.rs  threadpool.rs
ironfish-rust/src/notes/: create_asset_note.rs  creating_asset.rs  minting_asset.rs  mod.rs  note.rs  spendable_note.rs
ironfish-rust/src/poseidon/: bls12.rs  constants.rs  hasher.rs  mod.rs
ironfish-rust/src/primitives/: asset_type.rs  constants.rs  mod.rs  sapling.rs
ironfish-rust/src/proofs/: mod.rs
ironfish-rust/src/proofs/circuit/: create_asset.rs  mint_asset.rs  mod.rs  mycircuit.rs  output.rs  sapling.rs  spend.rs  util.rs
ironfish-rust/src/proofs/notes/: create_asset_note.rs  creating_asset.rs  mint_asset_note.rs  minting_asset.rs  mod.rs  spendable_note.rs
ironfish-rust/src/public_account/: create.rs  description.rs  mod.rs  transfer.rs
ironfish-rust/src/sapling_params/: README.md  params-sha512.txt  sapling-mint.params  sapling-output.params
ironfish-rust/src/serializing/: aead.rs  fr.rs  mod.rs
ironfish-rust/src/transaction/: burns.rs  data.rs  data_type.rs  evm.rs  miners_fee.rs  mints.rs  mod.rs  outputs.rs  proposed.rs  public_iron.rs  simple.rs  spending.rs  spends.rs  tests.rs  transfer.rs  unsigned.rs  utils.rs  value_balances.rs  verify.rs  version.rs
ironfish-setup/: .gitignore  Cargo.toml
ironfish-zkp/: Cargo.toml  LICENSE-MIT  README.md
ironfish-zkp/src/: constants.rs  hex.rs  lib.rs  util.rs
ironfish-zkp/src/circuits/: create_asset.rs  mint_asset.rs  mod.rs  output.rs  spend.rs  util.rs  value_commitment.rs
ironfish-zkp/src/primitives/: mod.rs  proof_generation_key.rs  value_commitment.rs
(+2677 files in other folders)
