[workspace]
resolver = "2"

members = [
    "benchmarks",
    "ironfish-mpc",
    "ironfish-phase2",
    "ironfish-rust",
    "ironfish-rust-nodejs",
    "ironfish-zkp",
]

[workspace.package]
authors = ["Iron Fish <contact@ironfish.network> (https://ironfish.network)"]
edition = "2021"
homepage = "https://ironfish.network/"
repository = "https://github.com/iron-fish/ironfish"

[patch.crates-io]
bellman = { git = "https://github.com/iron-fish/bellman", rev = "1cc52ca33e6db14233f1cbc0c9c5b7c822b229ec" }

[profile.release]
debug = true