[package]
name = "ironfish_mpc"
version = "0.2.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>", "Iron Fish <contact@ironfish.network> (https://ironfish.network)"]

[package.edition]
workspace = true

[[bin]]
name = "new"
required-features = ["verification"]

[[bin]]
name = "verify"
required-features = ["verification"]

[[bin]]
name = "beacon"
required-features = ["beacon"]

[[bin]]
name = "verify_transform"

[[bin]]
name = "split_params"

[dependencies]
ironfish-phase2 = { path = "../ironfish-phase2" }
pairing = "0.23"
rand = "0.8.5"
rand_chacha = "0.3.1"
blake2 = "0.10.6"

[dependencies.ironfish_zkp]
path = "../ironfish-zkp"
optional = true

[dependencies.byteorder]
version = "1"
optional = true

[dependencies.hex-literal]
version = "0.1"
optional = true

[features]
verification = ["ironfish_zkp"]
beacon = ["byteorder"]
