[package]
name = "ironfish-rust-nodejs"
version = "0.1.0"
license = "MPL-2.0"

description = "Node.js addon for interacting with transactions on the Iron Fish chain"
keywords = ["iron-fish", "cryptocurrency", "blockchain"]

publish = false

[package.authors]
workspace = true

[package.edition]
workspace = true

[package.homepage]
workspace = true

[package.repository]
workspace = true

[lib]
crate-type = ["cdylib"]

[features]
stats = ["ironfish/note-encryption-stats", "jubjub/stats", "dep:signal-hook"]

[dependencies]
base64 = "0.13.0"
fish_hash = "0.3.0"
ironfish = { path = "../ironfish-rust" }
ironfish-frost = { git = "https://github.com/iron-fish/ironfish-frost.git", branch = "main" }
napi = { version = "2.13.2", features = ["napi6"] }
napi-derive = "2.13.0"
jubjub = { git = "https://github.com/iron-fish/jubjub.git", branch = "blstrs" }
rand = "0.8.5"
num_cpus = "1.16.0"
signal-hook = { version = "0.3.17", optional = true, default-features = false, features = ["iterator"] }
chacha20poly1305 = "0.10.1"
password-hash = "0.5.0"
pbkdf2 = { version = "0.12.2", features = ["simple"] }

[build-dependencies]
napi-build = "2.0.1"
