[package]
name = "ironfish-rust-nodejs"
version = "0.1.0"
license = "MPL-2.0"

description = "Node.js addon for interacting with transactions on the Iron Fish chain"
keywords = ["iron-fish", "cryptocurrency", "blockchain"]

publish = false

[package.authors]
workspace = true

[package.edition]
workspace = true

[package.homepage]
workspace = true

[package.repository]
workspace = true

[lib]
crate-type = ["cdylib"]

[features]
stats = ["ironfish/note-encryption-stats", "ironfish-jubjub/stats", "dep:signal-hook"]

[dependencies]
base64 = "0.13.0"
fish_hash = "0.3.0"
ironfish = { path = "../ironfish-rust" }
ironfish-frost = { version = "0.1.0" }
ironfish-jubjub = { version = "0.1.0", features = ["multiply-many"] }
libc = "0.2.150"
napi = { version = "2.14.4", features = ["napi6"] }
napi-derive = "2.14.6"
num_cpus = "1.16.0"
rand = "0.8.5"
signal-hook = { version = "0.3.17", optional = true, default-features = false, features = ["iterator"] }

[build-dependencies]
napi-build = "2.0.1"
