[package]
name = "ironfish-wasm"
version = "0.1.0"
license = "MPL-2.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
blstrs = "0.6.0"
getrandom = { version = "0.2.8", features = ["js"] } # need to explicitly enable the `js` feature in order to run in a browser
group = "0.12.0"
ironfish = { version = "0.3.0", path = "../ironfish-rust" }
ironfish-jubjub = "0.1.0"
ironfish_zkp = { version = "0.2.0", path = "../ironfish-zkp" }
rand = "0.8.5"
rayon = { version = "1.8.1", features = ["web_spin_lock"] } # need to explicitly enable the `web_spin_lock` in order to run in a browser
wasm-bindgen = "0.2.95"

[dev-dependencies]
hex-literal = "0.4.1"
wasm-bindgen-test = "0.3.45"
