[package]
name = "ironfish"
version = "0.2.0"
license = "MPL-2.0"

description = "Rust crate for interacting with transactions on the Iron Fish chain"
keywords = ["iron-fish", "cryptocurrency", "blockchain"]

# Do not include the sapling params to reduce the crate size (which otherwise
# would be too big and would be rejected by crates.io). The build.rs script
# will take care of downloading these files at build time.
exclude = ["src/sapling_params/*.params"]

[package.authors]
workspace = true

[package.edition]
workspace = true

[package.homepage]
workspace = true

[package.repository]
workspace = true

[features]
benchmark = []
download-params = ["dep:reqwest"]

[lib]
name = "ironfish"
path = "src/lib.rs"

[dependencies]
bellperson = { git = "https://github.com/iron-fish/bellperson.git", branch = "blstrs", features = ["groth16"] }
blake2b_simd = "1.0.0"
blake2s_simd = "1.0.0"
blake3 = "1.3.1"
blstrs = { version = "0.6.0", features = ["portable"] }
byteorder = "1.4.3"
chacha20poly1305 = "0.9.0"
crypto_box = { version = "0.8", features = ["std"] }
ff = "0.12.0"
group = "0.12.0"
ironfish_zkp = { version = "0.2.0", path = "../ironfish-zkp" }
jubjub = { git = "https://github.com/iron-fish/jubjub.git", branch = "blstrs" }
lazy_static = "1.4.0"
libc = "0.2.126" # sub-dependency that needs a pinned version until a new release of cpufeatures: https://github.com/RustCrypto/utils/pull/789
rand = "0.8.5"
tiny-bip39 = "0.8"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }

[build-dependencies]
hex = "0.4"
reqwest = { optional = true, version = "0.11", features = ["blocking"] }
sha2 = "0.10"
