[package]
name = "ironfish_zkp"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[package.authors]
workspace = true

[package.edition]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zcash_primitives = "0.7.0"
zcash_proofs = "0.7.1"
